# EnginePol

./: Cargo.toml  Evoture_Flow.drawio  LICENSE  README.md  test_event.json
config/: action_template.example.json  playbooks-test-fail.json  work_router_roles.example.json  work_router_roles.json
demo/: bulk_publish.py  monitor.py  publish.py  push.py
docs/: FILE_AND_FLOW_GUIDE.md  RABBITMQ_BULK_TEST_REPORT.md  RABBITMQ_BULK_TEST_RESULT_100_EVENTS.md  RABBITMQ_BULK_TEST_RESULT_200_MIXED_EVENTS.md  RABBITMQ_BULK_TEST_RESULT_250_100_PASS_150_FAIL.md  SETUP_GUIDE.md  TESTING.md  content-hash.md  decisions.md  dispatching.md  flow.md
domain/: Cargo.toml
engine-core/: Cargo.toml
engine-core/src/: lib.rs  ulid.rs  (+1 more)
http-gateway/: Cargo.toml
http-gateway/src/: action_builder.rs  action_feed_publisher.rs  action_store.rs  action_template.rs  intake_api.rs  lib.rs  main.rs  metric_manager.rs  metric_publisher.rs  metric_store.rs  mongo_store.rs  pipeline.rs  rabbitmq_consumer.rs  seq_layer.rs  work_router.rs
schema/: event-envelope.example.json  event-envelope.schema.json
tests/: Cargo.toml
tests/src/: action_builder_tests.rs  action_template_tests.rs  decision.rs  lib.rs  rabbitmq_tests.rs  work_router_tests.rs
tests/src/assigner/: assigner.rs  mod.rs
tests/src/boolean_handler/: boolean_handler.rs  mod.rs
tests/src/diagnostics/: diagnostics.rs
tests/src/dispatcher/: dispatcher.rs
tests/src/envelope/: envelope.rs
tests/src/http_gateway_tests/: http_gateway_tests.rs  mod.rs
tests/src/orchestrator/: orchestrator.rs
tests/src/ulid/: mod.rs  ulid.rs
(+26 files in other folders)
