[package]
name = "http-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
actix = "0.13"
actix-web = "4"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
mongodb = { version = "2.8", default-features = false, features = ["tokio-runtime"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lapin = { version = "2", default-features = false, features = ["rustls"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
futures = "0.3"
url = "2"
engine-core = { path = "../engine-core" }
domain = { path = "../domain" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-log = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
chrono = "0.4"
